AKS-Advanced-Container-Networking/sample-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: demo-client
  labels:
    app: demo-container
spec:
  replicas: 1
  selector:
    matchLabels:
      app: demo-container
  template:
    metadata:
      labels:
        app: demo-container
    spec:
      containers:
      - name: agnhost
        image: registry.k8s.io/e2e-test-images/agnhost:2.43
        command: ["sleep", "infinity"]
